wwr/styles/rafting.css
/************************************************************
  *
  *               Fontstyle Embed
  *
  ************************************************************/

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');

/************************************************************
  *
  *               Universal Rules
  *
  ************************************************************/

*, *::after, *::before {
  box-sizing: border-box;
}

/************************************************************
  *
  *               Variables
  *
  ************************************************************/

:root {
    --primary-color: #10295a;
    --secondary-color: #ed5027;
    --accent1-color: #52a7e6;
    --accent2-color: #f5f5f5;
  
    --heading-font: 'Roboto', sans-serif;
    --paragraph-font: 'Roboto', sans-serif;
  
    --nav-background-color: #ed5027;
    --nav-link-color: #fff;
    --nav-hover-link-color: #10295a;
    --nav-hover-background-color: #f5f5f5;
  }

  h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    font-size: 40px;
    color: var(--secondary-color);
    padding-top: 25px;
    padding-right: 25px;
    padding-left: 25px;
  }

  p {
    color: var(--primary-color);
    font-family: var(--paragraph-font);
    padding-left: 25px;
    padding-right: 25px;
  }

  h1 {
    position: absolute;
    text-align: center;
    display: block;
    width: 100%;
    background-color: #52a6e6a0;
    top: 20px;
    height: 100px;
  }

  h2 {
    text-align: center;
  }

  h3 {
    font-size: 1.7rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    margin-left: 0px;
    padding-bottom: 0px; 
    padding-top: 0px; 
  }

  h4 {
    font-size: 1.5rem;
    padding-top: 1rem;
    padding-bottom: 0;
    margin: 0;
  }

  a {
    text-decoration: none;
  }  

  figcaption {
    padding-top: 10px;
    text-align: center;
  }
  
  img {
    max-width: 100%;
  }
  
/*******************************************************
*
*              Content Defaults
*
********************************************************/

body {
  margin: 0;
  padding: 0;
  font-family: roboto, sans-serif;
  font-size: 1.0em;
  color: #10295a;
  background: white; 
}

article {
  position: absolute;
  top: 400px;
  margin: 90px;
  background-color: #52a6e6a0;
}

figure {
  margin: 0px;
  text-justify: center;
}

p.second-paragraph {
  grid-column: 3/4;
  grid-row: 2/3;
}

article img {
  float: right;
  width: 20%;
	height: auto;
  padding: 20px;
}

.cta, button {
  margin: 1rem;
  background-color: #ed5027;
  color: #fff;
  border: none;
  border-radius: .5rem;
  padding: .75rem;
  font-size: 1.2rem;
  width: auto;
}

.cta,button:hover {
  background-color: #52a7e6;
}

.cta,button:active {
  background-color: #10295a;
}

/*******************************************************
*
*              Header Area
*
********************************************************/

header {
  display: grid;
  grid-template-columns: 40% 60%;
  align-self: center;
}

.logo {
  align-self: center;
  justify-self: center;
  padding: 20px;
}

nav {
  align-self: center;
  justify-self: center;
  background-color: var(--nav-background-color);
  font-family: var(--paragraph-font);
  font-size: 1.2rem;
  display: flex;
}

nav a {
  display: block;
  color: var(--nav-link-color);
  text-decoration: none;
  padding: 1rem 1rem 1rem 1rem;
}

nav a:link, nav a:visited {
  color: var(--nav-link-color);
}

nav a:hover {
  color: var(--nav-hover-link-color);
  background-color: var(--nav-hover-background-color);
}

/*******************************************************
*
*              Footer Area
*
*******************************************************/

footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  background-color: var(--nav-background-color);
}

footer p {
  grid-column: 2/3;
  grid-row: 1/2;
}

footer nav {
  grid-column: 3/4;
  grid-row: 1/2;
  align-self: center;
  justify-self: center;
}

.sociallinks img {
  padding-right: 5px; 
}

/*******************************************************
*
*              Rules for classes used on all pages
*
*******************************************************/

.hero {
  position: relative;
  display: block;
  width: 100vw;
  height: auto;
  overflow: hidden;
}

.sociallinks img {
  padding-right: 5px; 
}

.full-width-image {
  width: 100vw;
  height: auto;
}

.article-container {
  padding-left: 250px;
  padding-right: 250px;
}

/*******************************************************
*
*              Rules for Home Page only
*
*******************************************************/

.sign-up-form {
  align-items: center;
  padding-bottom: 60px;
}

.full-width-image {
  width: 100vw;
  height: auto;
}
/*******************************************************
*
*              Rules for About Page only
*
*******************************************************/

.history {
  display: grid;
  grid-template-columns: 35% 30% 35%;
  grid-template-rows: 120px 1fr;
}

.history h2 {
  grid-column: 2/3;
  grid-row: 1/2;
  align-self: center;
  justify-self: center;
}

.history p {
  grid-column: 1/2;
  grid-row: 2/3;
}

p.second-paragraph {
  grid-column: 3/4;
  grid-row: 2/3;
}

.historical-image {
  grid-column: 2/3;
  grid-row: 2/3; 
  align-self: center;
  justify-self: center;
}

.article-container {
  padding-left: 250px;
  padding-right: 250px;
}

.adventures {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 120px 1fr; 
  grid-gap: 5px;
  padding-top: 0px;
  padding-bottom: 70px;
  margin: 20px;
}

.adventures img {
  align-content: center;
}

.adventures h2 {
  grid-column: 1/6;
  grid-row: 1/2;
  align-self: center;
  justify-self: center;
}

/*******************************************************
*
*              Rules for Trips Page 3 only
*
*******************************************************/

.grid-container {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 2fr 1fr 1fr;
  grid-template-rows: 60px 500px 100px;
  padding-top: 20px;
  margin-left: 10px;
  margin-right: 10px;
}

.grid-container h2 {
  grid-column: 1/4;
  grid-row: 1/2;
  align-self: center;
}

.large-square {
  grid-column: 1/2;
  grid-row: 2/4;
  position: relative;
}

.large-square h3 {
  position: absolute;
  bottom: 130px;
  padding-left: 25px;
}

.large-square p {
  position: absolute;
  bottom: 25px;
  width: 98.5%;
  overflow: hidden;
  background-color: #52a6e6a0;
  padding-top: 10px;
  height: 90px;
}

.small-square-1 {
  grid-column: 2/3;
  grid-row: 2/3;
}

.small-square-1 p, h3 {
  padding-left: 0px;
  padding-right: 10px;
}

.small-square-2 {
  grid-column: 3/4;
  grid-row: 2/3; 
}

.small-square-2 p, h3 {
  padding: 0px;
  padding-right: 10px;
}

div .call-to-action {
  grid-column: 2/4;
  grid-row: 3/4;
  align-self: center;
  justify-self: center;
}

table {
  width: 96.5%;
  border-collapse: collapse;
  border-bottom: 1px solid #52a7e6;
  border-left: 1px solid #52a7e6;
  border-right: 1px solid #52a7e6;
  padding: 20px;
  margin-bottom: 100px;
  margin-left: 20px;
}

th, td {
  padding: 8px;
  text-align: left;
  border-bottom: 1px solid #52a7e6;
  border-right: 1px solid #52a7e6;
}

th {
  background-color: #ed5027;
  text-align: center;
  }

  tbody > tr > td:last-of-type {
    text-align: right;
  }

thead {
  background-color: #10295a;
  color: #fff;
}
caption {
  font-weight: 500;
  font-size: smaller;
  color: #10295a;
  margin: 15px;
}



/*******************************************************
*
*              Rules for Contact Us page
*
*******************************************************/

.infomation h3 {
  margin-left: 25px;
}

form {
  box-sizing: border-box;
  width: 650px;
  margin: 0 auto;
  padding: 2rem;
  border: 1px solid #10295a38; 
  border-radius: 0.5rem;
  background-color: #eee;
  display: grid;
}

fieldset {
  display: grid;
  grid-gap: .5rem;
  margin: 1rem;
  border: 1px solid #10295a38;
  padding: 1rem;
}

label, input, button, select, textarea {
  font-family: Roboto, sans-serif;
}

legend {
  padding: 0.5rem;
  color: #ed5027;
  font-size: 1.3em;
}

label {
  text-align: right;
  padding-right: 1rem;
}

input, select, textarea {
  padding: 0.5rem;
  font-size: 1.1rem;
  color: #10295a38; 
  border-radius: .5rem;
}

input[type="checkbox"] {
  width: 22px;
  height: 22px;
  vertical-align: bottom;
}

input[type="checkbox"] {
  width: 22px;
  height: 22px;
  vertical-align: bottom;
}

.textarea-label {
  align-items: left;
}

.feedback textarea {
  width: 100%;
}

/*******************************************************
*
*              THE END
*
*******************************************************/

